--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Moh. Saifoelloh Noor | saifoelloh@gmail.com",
   "homepage": "./",
   "private": true,
+  "icon": "modularitea-icon.ico",
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
@@ -20,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none && yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
     "electron-pack": "build -c.extraMetadata.main=build/electron.js",
     "preelectron-pack": "yarn build"
   },
